Fix text alignment to left for resume layout
- Left-align all content sections
- Keep only name header centered at top
- Ensure all headings, paragraphs, lists are left-aligned
- Proper resume document alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,7 @@ $link-color: #000;
 body {
   font-size: 14px;
   line-height: 1.4;
+  text-align: left;
 }
 
 .wrap {
@@ -50,20 +51,23 @@ body {
   max-width: 900px;
   margin: 0 auto;
   padding: 30px 20px;
+  text-align: left;
 }
 
 .content {
   font-size: 14px;
   line-height: 1.5;
   max-width: 100%;
+  text-align: left;
 }
 
-/* Tight typography */
+/* Tight typography - left aligned */
 h1, h2, h3, h4, h5, h6 {
   margin-top: 1.2em;
   margin-bottom: 0.5em;
   line-height: 1.3;
   font-weight: 600;
+  text-align: left;
 }
 
 h1 {
@@ -79,27 +83,39 @@ h2 {
   padding-bottom: 0.3em;
   margin-top: 1.5em;
   margin-bottom: 0.8em;
+  text-align: left;
 }
 
 h3 {
   font-size: 1.1em;
   margin-top: 1em;
   margin-bottom: 0.4em;
+  text-align: left;
+}
+
+h4 {
+  font-size: 1em;
+  margin-top: 0.8em;
+  margin-bottom: 0.3em;
+  text-align: left;
 }
 
 p {
   margin: 0.5em 0;
   line-height: 1.5;
+  text-align: left;
 }
 
 ul, ol {
   margin: 0.5em 0;
   padding-left: 1.5em;
+  text-align: left;
 }
 
 li {
   margin: 0.3em 0;
   line-height: 1.5;
+  text-align: left;
 }
 
 hr {
@@ -146,13 +162,16 @@ hr {
   margin: 1.5em 0;
   padding: 0;
   border: none;
+  text-align: left;
   
   h2 {
     margin-bottom: 0.5em;
+    text-align: left;
   }
   
   p {
     margin: 0.4em 0;
+    text-align: left;
   }
   
   .cta-button {
@@ -275,6 +294,7 @@ hr {
 .resume-section-header {
   margin: 0 0 1.5em 0;
   padding: 0;
+  text-align: left;
   
   h2 {
     font-size: 1.3em;
@@ -283,11 +303,13 @@ hr {
     border-bottom: 1px solid #ddd;
     padding-bottom: 0.3em;
     margin: 0 0 0.8em 0;
+    text-align: left;
   }
   
   .resume-meta {
     margin: 0.5em 0;
     line-height: 1.6;
+    text-align: left;
     
     a {
       color: $link-color;
